--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
-<!DOCUMENT html>
-<html>
+Ôªø<!DOCTYPE html>
+<html lang="pt-br">
 <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>
         Email Em Massa
     </title>
@@ -9,7 +10,7 @@
 <body>
     <header>
         <h1>Enviar email para todos</h1>
-        <h2>Quando precisar enviar email, assim fica mais f·cil</h2>
+        <h2>Quando precisar enviar email, assim fica mais f√°cil</h2>
     </header>
     <main>
         <div id="de">
@@ -21,7 +22,7 @@
             <input type="email" id="dest" class="endereco" />
         </div>
         <div id="texto">
-            <label for="msg">Texto padr„o</label>
+            <label for="msg">Texto padr√£o</label>
             <textarea id="msg" class="mensagem"></textarea>
         </div>
         <div id="variavel">
@@ -34,7 +35,7 @@
         </div>
     </main>
     <footer>
-        <h2>RealizaÁ„o &copy;SOFTCODE </h2>
+        <h2>Realiza√ß√£o &copy;SOFTCODE </h2>
     </footer>
 </body>
 </html>
