Coloquei as colunas na horizontal

--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
         <label for="col">Adicionar coluna</label>
         <button id="col" class="btn btn-dark" onclick="addColuna()">+</button>
 
-        <div class="mensagem row" id="text">
+        <div class="corpoTexto" id="corpo">
+            <!-- <div class="row align-items-start" id="text">
 
-            <div id="col" class="col-lg-4 col" title="Coluna" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-
+            <div id="col" class="colalign-items-start" title="Coluna" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        </div>-->
         </div>
 
         <div class="variavel" id="variavel" title="Variavel" draggable="true" ondrop="drop(event)" ondragover="allowDrop(event)">
