--- a/index.html
+++ b/index.html
@@ -30,12 +30,7 @@
         <label for="col">Adicionar coluna</label>
         <button id="col" class="btn btn-dark" onclick="addColuna()">+</button>
 
-        <div class="corpoTexto" id="corpo">
-            <!-- <div class="row align-items-start" id="text">
-
-            <div id="col" class="colalign-items-start" title="Coluna" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-        </div>-->
-        </div>
+        <div class="corpoTexto" id="corpo">    </div>
 
         <div class="variavel" id="variavel" title="Variavel" draggable="true" ondrop="drop(event)" ondragover="allowDrop(event)">
             <label>
