Configurado o dispardor de email, e testado seu envio.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
     <form method="post" action="php/montador.php">
     <main>
 
-        <div id="Vde">
+        <div id="assunto">
+            <label for="assu">Assunto</label>
+            <input type="text" id="assu" name="assunto" class="endereco" />
+        </div><div id="Vde">
             <label for="de">ORIGEM</label>
             <input type="email" id="de" name="de" class="endereco" />
         </div>
