--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="js/script.js" type="text/javascript"></script>
     <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
+    <script type="text/javascript" src="http://js.nicedit.com/nicEdit-latest.js"></script>
+    <script type="text/javascript">
+        //bkLib.onDomLoaded(function() { nicEditors.allTextAreas() });
+        // convert all text areas to rich text editor on that page
+
+        bkLib.onDomLoaded(function() {
+            //new nicEditor().panelInstance('corpo');
+            new nicEditor({fullPanel : true}).panelInstance('corpo');
+        });
+
+        // convert text area with id area1 to rich text editor.
+
+    </script>
 </head>
 <body>
     
@@ -17,51 +30,61 @@
         <h2>Quando precisar enviar email, assim fica mais fácil</h2>
     </header>
     <form method="post" action="php/montador.php">
-    <main>
+        <main>
 
-        <div id="assunto">
-            <label for="assu">Assunto</label>
-            <input type="text" id="assu" name="assunto" class="endereco" />
-        </div><div id="Vde">
-            <label for="de">ORIGEM</label>
-            <input type="email" id="de" name="de" class="endereco" />
-        </div>
-        <div id="Vpara">
-            <label for="para">DESTINO</label>
-            <input type="email" id="para" name="para" class="endereco" />
-        </div>
-        <label>Arraste e solte os elementos aqui na ordem desejada. </label>
-        <label for="col">Adicionar linha</label>
-        <input type="button" value="+" id="col" class="botao" onclick="addColuna()">
-
-        <div class="corpoTexto" id="corpo">
-
-        </div>
-
-        <div class="variavel" id="variavel" title="Variavel" draggable="true" ondrop="drop(event)" ondragover="allowDrop(event)">
-            <label>
-                Nesta área criaremos elementos para editar o texto e
-                nomes para usar de referência.
-            </label>
-            <div class="row">
-                <label for="var">Variavel</label>
-                <input type="button" value="+" id="var" class="botao" onclick="addVariavel()">
-                <div id="varPainel"></div>
+            <div id="assunto">
+                <label for="assu">Assunto</label>
+                <input type="text" id="assu" name="assunto" class="endereco" />
+            </div><div id="Vde">
+                <label for="de">ORIGEM</label>
+                <input type="email" id="de" name="de" class="endereco" />
             </div>
-            <div class="row">
-                <label for="txt">Texto padrão</label>
-                <input type="button" value="+" id="txt" class="botao" onclick="addTexto()">
-                <div id="txtPaine"></div>
+            <div id="Vpara">
+                <label for="para">DESTINO</label>
+                <input type="email" id="para" name="para" class="endereco" />
+               <!--Posso criar uma área para colocar um "Lista" para o destino
+               Nome, Email-->
             </div>
-            <input class="col-md-4" type="submit">
-        </div>
+            <label>Arraste e solte os elementos aqui na ordem desejada. </label>
+            <label for="col">Adicionar linha</label>
+            <input type="button" value="+" id="col" class="botao" onclick="addColuna()">
 
-        <div id="anexo">
-            <label for="ane">Anexo</label>
-            <input type="file" id="ane" name="anexo" class="anexo" />
-        </div>
+            <textarea class="corpoTexto" name="texto0" id="corpo"></textarea>
 
-    </main>
+            <div class="variavel" id="variavel" title="Variavel" draggable="true" ondrop="drop(event)" ondragover="allowDrop(event)">
+                <label>
+                    Nesta área criaremos elementos para editar o texto e
+                    nomes para usar de referência.
+                </label>
+                <div class="row">
+
+                    <!--
+                    O cliente vai colocar um arquivo, que vai ter uma tabela de dados
+                    tendo, a progem e outras variáveis.
+                    o sistema, irá separar esta tabela por colunas,
+                    e vai gerar um arquivo arrastavél com o nome da coluna, linha 0.
+                    estes arquivos devem gerar referências em endereços, e será guardados em assent
+                    tipo '\assent\nome.json?nome'
+                    -->
+                    <label for="var">Variavel</label>
+                    <input type="button" value="+" id="var" class="botao" onclick="addVariavel()">
+                    <div id="varPainel"></div>
+                </div>
+                <div class="row">
+                    <label for="txt">Texto padrão</label>
+                    <input type="button" value="+" id="txt" class="botao" onclick="addTexto()">
+                    <div id="txtPaine"></div>
+                </div>
+                <input class="col-md-4" type="submit">
+            </div>
+
+
+            <div id="anexo">
+                <label for="ane">Anexo</label>
+                <input type="file" id="ane" name="anexo" class="anexo" />
+            </div>
+
+        </main>
     </form>
     <footer>
         <h2>Realização &copy;SOFTCODE </h2>
